--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div>
-            <h1 data-end="_">garren-diab></h1>
+            <h1 data-end="_"id="terminal">garren-diab></h1>
         </div>
     </header>
     <main>
@@ -110,6 +110,7 @@
             <div id="gap"></div>
         </div>
     </main>
+    <script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 
 </html>
