Playing around with indexes that change on click

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css" media="screen"/>
+    <link rel="stylesheet" href="./css/main.css" media="screen" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
@@ -21,92 +21,92 @@
     <main>
         <div id="container">
             <a href="#" id="m-letter">
-                <div class="letter">
-                    <img id="m-topleft" src="images/m-topleft.webp">
-                    <img id="m-topright" src="images/m-topright.webp">
-                    <img id="m-botleft" src="images/m-botleft.webp">
-                    <img id="m-botright" src="images/m-botright.webp">
+                <div class="letter-inner" index="0">
+                    <img class="top-left" src="images/m-topleft.webp" alt="Letter M, top left">
+                    <img class="top-right" src="images/m-topright.webp" alt="Letter M, top left">
+                    <img class="bot-left" src="images/m-botleft.webp" alt="Letter M, top left">
+                    <img class="bot-right" src="images/m-botright.webp" alt="Letter M, top left">
                 </div>
             </a>
 
             <a href="#" id="y-letter">
-                <div class="letter">
-                    <img id="y-topleft" src="images/y-topleft.webp">
-                    <img id="y-topright" src="images/y-topright.webp">
-                    <img id="y-botleft" src="images/y-botleft.webp">
-                    <img id="y-botright" src="images/y-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/y-topleft.webp" alt="Letter Y, top left">
+                    <img class="top-right" src="images/y-topright.webp" alt="Letter Y, top left">
+                    <img class="bot-left" src="images/y-botleft.webp" alt="Letter Y, top left">
+                    <img class="bot-right" src="images/y-botright.webp" alt="Letter Y, top left">
                 </div>
             </a>
 
             <a href="#" id="p-letter">
-                <div class="letter">
-                    <img id="p-topleft" src="images/p-topleft.webp">
-                    <img id="p-topright" src="images/p-topright.webp">
-                    <img id="p-botleft" src="images/p-botleft.webp">
-                    <img id="p-botright" src="images/p-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/p-topleft.webp" alt="Letter P, top left">
+                    <img class="top-right" src="images/p-topright.webp" alt="Letter P, top left">
+                    <img class="bot-left" src="images/p-botleft.webp" alt="Letter P, top left">
+                    <img class="bot-right" src="images/p-botright.webp" alt="Letter P, top left">
                 </div>
             </a>
 
             <a href="#" id="r-letter">
-                <div class="letter">
-                    <img id="r-topleft" src="images/r-topleft.webp">
-                    <img id="r-topright" src="images/r-topright.webp">
-                    <img id="r-botleft" src="images/r-botleft.webp">
-                    <img id="r-botright" src="images/r-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/r-topleft.webp" alt="Letter R, top left">
+                    <img class="top-right" src="images/r-topright.webp" alt="Letter R, top left">
+                    <img class="bot-left" src="images/r-botleft.webp" alt="Letter R, top left">
+                    <img class="bot-right" src="images/r-botright.webp" alt="Letter R, top left">
                 </div>
             </a>
 
             <a href="#" id="o-letter">
-                <div id="o-letter" class="letter">
-                    <img id="o-topleft" src="images/o-topleft.webp">
-                    <img id="o-topright" src="images/o-topright.webp">
-                    <img id="o-botleft" src="images/o-botleft.webp">
-                    <img id="o-botright" src="images/o-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/o-topleft.webp" alt="Letter O, top left">
+                    <img class="top-right" src="images/o-topright.webp" alt="Letter O, top left">
+                    <img class="bot-left" src="images/o-botleft.webp" alt="Letter O, top left">
+                    <img class="bot-right" src="images/o-botright.webp" alt="Letter O, top left">
                 </div>
             </a>
 
             <a href="#" id="j-letter">
-                <div id="j-letter" class="letter">
-                    <img id="j-topleft" src="images/j-topleft.webp">
-                    <img id="j-topright" src="images/j-topright.webp">
-                    <img id="j-botleft" src="images/j-botleft.webp">
-                    <img id="j-botright" src="images/j-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/j-topleft.webp" alt="Letter J, top left">
+                    <img class="top-right" src="images/j-topright.webp" alt="Letter J, top left">
+                    <img class="bot-left" src="images/j-botleft.webp" alt="Letter J, top left">
+                    <img class="bot-right" src="images/j-botright.webp" alt="Letter J, top left">
                 </div>
             </a>
 
             <a href="#" id="e-letter">
-                <div id="e-letter" class="letter">
-                    <img id="e-topleft" src="images/e-topleft.webp">
-                    <img id="e-topright" src="images/e-topright.webp">
-                    <img id="e-botleft" src="images/e-botleft.webp">
-                    <img id="e-botright" src="images/e-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/e-topleft.webp" alt="Letter E, top left">
+                    <img class="top-right" src="images/e-topright.webp" alt="Letter E, top left">
+                    <img class="bot-left" src="images/e-botleft.webp" alt="Letter E, top left">
+                    <img class="bot-right" src="images/e-botright.webp" alt="Letter E, top left">
                 </div>
             </a>
 
             <a href="#" id="c-letter">
-                <div id="c-letter" class="letter">
-                    <img id="c-topleft" src="images/c-topleft.webp">
-                    <img id="c-topright" src="images/c-topright.webp">
-                    <img id="c-botleft" src="images/c-botleft.webp">
-                    <img id="c-botright" src="images/c-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src=" images/c-topleft.webp" alt="Letter C, top left">
+                    <img class="top-right" src="images/c-topright.webp" alt="Letter C, top left">
+                    <img class="bot-left" src="images/c-botleft.webp" alt="Letter C, top left">
+                    <img class="bot-right" src="images/c-botright.webp" alt="Letter C, top left">
                 </div>
             </a>
 
             <a href="#" id="t-letter">
-                <div id="t-letter" class="letter">
-                    <img id="t-topleft" src="images/t-topleft.webp">
-                    <img id="t-topright" src="images/t-topright.webp">
-                    <img id="t-botleft" src="images/t-botleft.webp">
-                    <img id="t-botright" src="images/t-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/t-topleft.webp" alt="Letter T, top left">
+                    <img class="top-right" src="images/t-topright.webp" alt="Letter T, top left">
+                    <img class="bot-left" src="images/t-botleft.webp" alt="Letter T, top left">
+                    <img class="bot-right" src="images/t-botright.webp" alt="Letter T, top left">
                 </div>
             </a>
 
             <a href="#" id="s-letter">
-                <div id="s-letter" class="letter">
-                    <img id="s-topleft" src="images/s-topleft.webp">
-                    <img id="s-topright" src="images/s-topright.webp">
-                    <img id="s-botleft" src="images/s-botleft.webp">
-                    <img id="s-botright" src="images/s-botright.webp">
+                <div class="letter-inner">
+                    <img class="top-left" src="images/s-topleft.webp" alt="Letter S, top left">
+                    <img class="top-right" src="images/s-topright.webp" alt="Letter S, top left">
+                    <img class="bot-left" src="images/s-botleft.webp" alt="Letter S, top left">
+                    <img class="bot-right" src="images/s-botright.webp" alt="Letter S, top left">
                 </div>
             </a>
 
