--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
 
             <a href="#" id="y-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/y-topleft.webp" alt="Letter Y, top left">
                     <img class="top-right" src="images/y-topright.webp" alt="Letter Y, top left">
                     <img class="bot-left" src="images/y-botleft.webp" alt="Letter Y, top left">
@@ -39,7 +39,7 @@
             </a>
 
             <a href="#" id="p-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/p-topleft.webp" alt="Letter P, top left">
                     <img class="top-right" src="images/p-topright.webp" alt="Letter P, top left">
                     <img class="bot-left" src="images/p-botleft.webp" alt="Letter P, top left">
@@ -48,7 +48,7 @@
             </a>
 
             <a href="#" id="r-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/r-topleft.webp" alt="Letter R, top left">
                     <img class="top-right" src="images/r-topright.webp" alt="Letter R, top left">
                     <img class="bot-left" src="images/r-botleft.webp" alt="Letter R, top left">
@@ -57,7 +57,7 @@
             </a>
 
             <a href="#" id="o-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/o-topleft.webp" alt="Letter O, top left">
                     <img class="top-right" src="images/o-topright.webp" alt="Letter O, top left">
                     <img class="bot-left" src="images/o-botleft.webp" alt="Letter O, top left">
@@ -66,7 +66,7 @@
             </a>
 
             <a href="#" id="j-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/j-topleft.webp" alt="Letter J, top left">
                     <img class="top-right" src="images/j-topright.webp" alt="Letter J, top left">
                     <img class="bot-left" src="images/j-botleft.webp" alt="Letter J, top left">
@@ -75,7 +75,7 @@
             </a>
 
             <a href="#" id="e-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/e-topleft.webp" alt="Letter E, top left">
                     <img class="top-right" src="images/e-topright.webp" alt="Letter E, top left">
                     <img class="bot-left" src="images/e-botleft.webp" alt="Letter E, top left">
@@ -84,7 +84,7 @@
             </a>
 
             <a href="#" id="c-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src=" images/c-topleft.webp" alt="Letter C, top left">
                     <img class="top-right" src="images/c-topright.webp" alt="Letter C, top left">
                     <img class="bot-left" src="images/c-botleft.webp" alt="Letter C, top left">
@@ -93,7 +93,7 @@
             </a>
 
             <a href="#" id="t-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/t-topleft.webp" alt="Letter T, top left">
                     <img class="top-right" src="images/t-topright.webp" alt="Letter T, top left">
                     <img class="bot-left" src="images/t-botleft.webp" alt="Letter T, top left">
@@ -102,7 +102,7 @@
             </a>
 
             <a href="#" id="s-letter">
-                <div class="letter-inner">
+                <div class="letter-inner" index="0">
                     <img class="top-left" src="images/s-topleft.webp" alt="Letter S, top left">
                     <img class="top-right" src="images/s-topright.webp" alt="Letter S, top left">
                     <img class="bot-left" src="images/s-botleft.webp" alt="Letter S, top left">
