--- a/maeve-human-portfolio/index.html
+++ b/maeve-human-portfolio/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <img src="images/logo.png" alt="Maeve Human Logo" id="logo">
-        <h1>Home</h1>
+        <h1>Graduate Portfolio</h1>
         <nav id="primary-nav">
             <a href="index.html" class="nav-link active">Home</a>
             <a href="design.html" class="nav-link">Design</a>
