--- a/maeve-human-portfolio/construction.html
+++ b/maeve-human-portfolio/construction.html
@@ -15,8 +15,9 @@
 
 <body>
     <header>
+        
         <img src="images/logo.png" alt="Maeve Human Logo" id="logo">
-        <h1>Construction</h1>
+        <h1>Graduate Portfolio</h1>
         <nav id="primary-nav">
             <a href="index.html" class="nav-link">Home</a>
             <a href="design.html" class="nav-link">Design</a>
