Added back to home page

--- a/maeve-human-portfolio/construction.html
+++ b/maeve-human-portfolio/construction.html
@@ -9,13 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/small.css">
     <link href="images/logo.webp" rel="shortcut icon">
 </head>
 
 <body>
     <header>
-        
+        <a id="terminal" href="../">
+            <h1 data-end="_">garren-diab>click here to go back</h1>
+        </a>
         <img src="images/logo.png" alt="Maeve Human Logo" id="logo">
         <h1>Graduate Portfolio</h1>
         <nav id="primary-nav">
