--- a/maeve-human-portfolio/index.html
+++ b/maeve-human-portfolio/index.html
@@ -9,19 +9,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/small.css">
     <link href="images/logo.webp" rel="shortcut icon">
 </head>
 
 <body>
     <header>
+        <a id="terminal" href="../">
+            <h1 data-end="_">garren-diab>click here to go back</h1>
+        </a>
         <img src="images/logo.png" alt="Maeve Human Logo" id="logo">
         <h1>Graduate Portfolio</h1>
         <nav id="primary-nav">
             <a href="index.html" class="nav-link active">Home</a>
             <a href="design.html" class="nav-link">Design</a>
             <a href="construction.html" class="nav-link">Construction</a>
-            <!-- <a href="#info" class="nav-link">Contact Details</a> -->
             <a href="cv.html" class="nav-link">CV</a>
         </nav>
     </header>
@@ -58,7 +61,7 @@
             <h3>|:. Undergraduate Portfolio .:|:. Maeve Human .:|</h3>
         </div>
     </footer>
-    
+
     <script src="scripts/script.js"></script>
 </body>
 
