Added button to home page

--- a/bountiful-foods/about-us.html
+++ b/bountiful-foods/about-us.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Rubik+Microbe&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
 
     <link href="images/logo50.webp" rel="shortcut icon">
     <title>About Us</title>
@@ -25,6 +26,9 @@
 
 <body>
     <header>
+        <a id="terminal" href="../">
+            <h1 data-end="_">garren-diab>click here to go back</h1>
+        </a>
         <a href="index.html" id="top-logo">
             <picture>
                 <source media="(max-width:560px)" srcset="images/logo50.webp">
@@ -57,7 +61,8 @@
                 <img src="images/history.webp" alt="Bountiful Foods History">
             </picture>
             <h1 id="about-bf-head">About Bountiful Foods</h1>
-            <p id="about-bf-p">Proin eget tortor risus. Nulla quis lorem ut libero malesuada feugiat. Lorem ipsum dolor sit amet,
+            <p id="about-bf-p">Proin eget tortor risus. Nulla quis lorem ut libero malesuada feugiat. Lorem ipsum dolor
+                sit amet,
                 consectetur adipiscing elit. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec
                 sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
             </p>
@@ -67,7 +72,8 @@
                 <img src="images/summary.webp" alt="Summary image">
             </picture>
             <h1 id="about-area-head">About Area</h1>
-            <p id="about-area-p">Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla quis lorem
+            <p id="about-area-p">Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere blandit.
+                Nulla quis lorem
                 ut libero malesuada feugiat. Sed porttitor lectus nibh. Vivamus magna justo, lacinia eget consectetur
                 sed, convallis at tellus. Sed porttitor lectus nibh.</p>
         </div>
