--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Rubik+Microbe&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
 
     <link href="images/logo50.webp" rel="shortcut icon">
     <title>Fresh</title>
@@ -25,6 +26,9 @@
 
 <body>
     <header>
+        <a id="terminal" href="../">
+            <h1 data-end="_">garren-diab>click here to go back</h1>
+        </a>
         <a href="index.html" id="top-logo">
             <picture>
                 <source media="(max-width:560px)" srcset="images/logo50.webp">
@@ -57,7 +61,7 @@
                     <abbr title="The field is required">*</abbr>
                     <input type="text" name="first-name" id="first-name" autofocus required>
                 </label>
-                
+
                 <label for="email">
                     Email
                     <abbr title="The field is required">*</abbr>
@@ -99,12 +103,12 @@
             <div>
                 <h2>Thank you <span id="confirm-name"></span> for placing an order!</h2>
                 <p>We will get to your order as soon as possible.<br>
-                For now you can view your order on the home page.</p>
+                    For now you can view your order on the home page.</p>
                 <a href="index.html#orders">View your Order</a>
             </div>
         </div>
     </main>
-    
+
     <footer>
         <a href="index.html">
             <picture>
