--- a/bountiful-foods/index.html
+++ b/bountiful-foods/index.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Rubik+Microbe&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
 
     <link href="images/logo50.webp" rel="shortcut icon">
     <title>Home</title>
@@ -25,6 +26,9 @@
 
 <body>
     <header>
+        <a id="terminal" href="../">
+            <h1 data-end="_">garren-diab>click here to go back</h1>
+        </a>
         <a href="index.html" id="top-logo">
             <picture>
                 <source media="(max-width:560px)" srcset="images/logo50.webp">
