--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,10 +21,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&family=Pragati+Narrow&family=Proza+Libre&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
+        <a id="terminal" href="../">
+            <h1 data-end="_">garren-diab>click here to go back</h1>
+        </a>
         <img src="images/logo.webp" alt="logo">
         <div>
             <h1>Chamber of Commerce</h1>
