--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" media="screen" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap" rel="stylesheet" />
     <title>Home</title>
 </head>
 
@@ -22,97 +22,104 @@
         <div id="container">
             <a href="#" id="m-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter M, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter M, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter M, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter M, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter M, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter M, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter M, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter M, top left" />
                 </div>
             </a>
 
             <a href="#" id="y-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter Y, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter Y, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter Y, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter Y, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter Y, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter Y, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter Y, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter Y, top left" />
                 </div>
             </a>
 
             <a href="#" id="p-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter P, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter P, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter P, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter P, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter P, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter P, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter P, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter P, top left" />
                 </div>
             </a>
 
             <a href="#" id="r-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter R, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter R, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter R, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter R, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter R, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter R, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter R, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter R, top left" />
                 </div>
             </a>
 
             <a href="#" id="o-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter O, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter O, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter O, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter O, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter O, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter O, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter O, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter O, top left" />
                 </div>
             </a>
 
             <a href="#" id="j-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter J, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter J, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter J, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter J, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter J, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter J, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter J, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter J, top left" />
                 </div>
             </a>
 
             <a href="#" id="e-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter E, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter E, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter E, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter E, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter E, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter E, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter E, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter E, top left" />
                 </div>
             </a>
 
             <a href="#" id="c-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter C, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter C, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter C, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter C, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter C, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter C, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter C, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter C, top left" />
                 </div>
             </a>
 
             <a href="#" id="t-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter T, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter T, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter T, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter T, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter T, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter T, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter T, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter T, top left" />
                 </div>
             </a>
 
             <a href="#" id="s-letter">
                 <div class="letter-inner" index="0">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter S, top left">
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter S, top left">
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter S, top left">
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter S, top left">
+                    <img class="top-left" src="images/placeholder.webp" alt="Letter S, top left" />
+                    <img class="top-right" src="images/placeholder.webp" alt="Letter S, top left" />
+                    <img class="bot-left" src="images/placeholder.webp" alt="Letter S, top left" />
+                    <img class="bot-right" src="images/placeholder.webp" alt="Letter S, top left" />
                 </div>
             </a>
 
             <div id="gap"></div>
         </div>
     </main>
+    <footer>
+        <div>
+            <p>Garren Diab</p>
+            <p></p>Phone: <a href="rel:(060)9811694">+27 60 981 1694</a></p>
+            <p></p>Email: <a href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
+        </div>
+    </footer>
     <script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 
