Started scrambler code for footer content

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <footer>
         <div>
             <p>Garren Diab</p>
-            <p></p>Phone: <a href="rel:(060)9811694">+27 60 981 1694</a></p>
-            <p></p>Email: <a href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
+            <p>Phone: <a id="phone" text="+27 60 981 1694" href="rel:(060)9811694">+27 60 981 1694</a></p>
+            <p>Email: <a id="email" text="garrendiab@gmail.com" href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
         </div>
     </footer>
     <script type="text/javascript" src="./scripts/main.js"></script>
