--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
             <p>Garren Diab</p>
             <p>Phone: <a id="phone" text="+27 60 981 1694" href="rel:(060)9811694">+27 60 981 1694</a></p>
             <p>Email: <a id="email" text="garrendiab@gmail.com" href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
+            <p>Offical Transcript: <a href="transcript/">BYU-I Offical Transcript</a></p>
+            <p>Resume: <a id="resume" text="Resume" href="resume/">Resume</a></p>
         </div>
     </footer>
     <script type="text/javascript" src="./scripts/main.js"></script>
