Changed pdf to png

--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div id="pdf">
-            <iframe src="resume.pdf" width="100%" height="800px"></iframe>
+            <img src="resume.png" alt="Resume">
         </div>
     </main>
     <footer>
