--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
     <main>
         <div id="container">
+            <img id="click" src="images/click.webp">
             <a href="https://maevehuman.github.io/MyUGPortfolio/" target="_blank" class="letter" id="m">
                 <div class="letter-inner">
                     <img class="top-left" src="images/placeholder.webp" alt="Letter M, top left" />
