--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <header>
         <div>
             <h1 data-end="_" id="terminal">garren-diab></h1>
+            <button class="nav-btn">
+                <svg class="hamburger" viewBox="0 0 100 100">
+                    <rect width="80" height="10" x="10" y="25" rx="5"></rect>
+                    <rect width="80" height="10" x="10" y="45" rx="5"></rect>
+                    <rect width="80" height="10" x="10" y="65" rx="5"></rect>
+                </svg>
+            </button>
+            <nav id="nav">
+                <ul>
+                    <li><a href="#" class="active" id="home" data-value="Home">Home</a></li>
+                    <li><a href="transcript/" id="transcript" data-value="Transcript">Transcript</a></li>
+                    <li><a href="resume/" id="resume" data-value="Resume">Resume</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <main>
@@ -118,9 +132,8 @@
         <div>
             <p>Garren Diab</p>
             <p>Phone: <a id="phone" data-value="+27 60 981 1694" href="rel:(060)9811694">+27 60 981 1694</a></p>
-            <p>Email: <a id="email" data-value="garrendiab@gmail.com" href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
-            <p>Offical Transcript: <a id="transcript" data-value="BYU-I Offical Transcript" href="transcript/">BYU-I Offical Transcript</a></p>
-            <p>Resume: <a id="resume" data-value="Resume" href="resume/">Resume</a></p>
+            <p>Email: <a id="email" data-value="garrendiab@gmail.com"
+                    href="mailto:garren@gmail.com">garrendiab@gmail.com</a></p>
         </div>
     </footer>
     <script type="text/javascript" src="./scripts/main.js"></script>
